feat: Store env vars in service entity instead of separate table
To implement support for env var custom ordering,
env vars are moved to jsonb column in service table
Unused env var APIs are removed

include #9
