# api/openapi.yaml
@@ -461,91 +461,6 @@ paths:
         500:
           $ref: '#/components/responses/InternalServerError'
 
-
-  /api/v1/services/{id}/env:
-    parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-    get:
-      operationId: GetServiceEnvVars
-      tags:
-        - service
-      summary: Get service environment variables list
-      responses:
-        200:
-          description: Retrieved env vars
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/EnvVar'
-        400:
-          $ref: '#/components/responses/BadRequest'
-        401:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
-        500:
-          $ref: '#/components/responses/InternalServerError'
-    put:
-      operationId: SetServiceEnvVar
-      tags:
-        - service
-      summary: Create or update service environment variable
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/EnvVar'
-      responses:
-        200:
-          description: Created or updated environment variable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/EnvVar'
-        400:
-          $ref: '#/components/responses/BadRequest'
-        401:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
-        500:
-          $ref: '#/components/responses/InternalServerError'
-
-  /api/v1/services/{id}/env/{name}:
-    parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-      - name: name
-        in: path
-        required: true
-        schema:
-          type: string
-    delete:
-      operationId: DeleteServiceEnvVar
-      tags:
-        - service
-      summary: Delete service environment variable
-      responses:
-        200:
-          description: Success
-        400:
-          $ref: '#/components/responses/BadRequest'
-        401:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
-        500:
-          $ref: '#/components/responses/InternalServerError'
-
   /api/v1/managed_services:
     post:
       operationId: CreateManagedService
