# app/server/service.go
@@ -4,7 +4,6 @@ import (
 	"context"
 	"github.com/kuzznya/letsdeploy/app/middleware"
 	"github.com/kuzznya/letsdeploy/internal/openapi"
-	"github.com/pkg/errors"
 )
 
 func (s Server) CreateService(ctx context.Context, request openapi.CreateServiceRequestObject) (openapi.CreateServiceResponseObject, error) {
@@ -54,28 +53,4 @@ func (s Server) RestartService(ctx context.Context, request openapi.RestartServi
 		return nil, err
 	}
 	return openapi.RestartService200Response{}, nil
-}
-
-func (s Server) GetServiceEnvVars(ctx context.Context, request openapi.GetServiceEnvVarsRequestObject) (openapi.GetServiceEnvVarsResponseObject, error) {
-	envVars, err := s.core.Services.GetServiceEnvVars(request.Id, middleware.GetAuth(ctx))
-	if err != nil {
-		return nil, errors.Wrap(err, "failed to get service env vars")
-	}
-	return openapi.GetServiceEnvVars200JSONResponse(envVars), nil
-}
-
-func (s Server) SetServiceEnvVar(ctx context.Context, request openapi.SetServiceEnvVarRequestObject) (openapi.SetServiceEnvVarResponseObject, error) {
-	envVar, err := s.core.Services.SetServiceEnvVar(ctx, request.Id, *request.Body, middleware.GetAuth(ctx))
-	if err != nil {
-		return nil, errors.Wrap(err, "failed to set service env var")
-	}
-	return openapi.SetServiceEnvVar200JSONResponse(*envVar), nil
-}
-
-func (s Server) DeleteServiceEnvVar(ctx context.Context, request openapi.DeleteServiceEnvVarRequestObject) (openapi.DeleteServiceEnvVarResponseObject, error) {
-	err := s.core.Services.DeleteServiceEnvVar(ctx, request.Id, request.Name, middleware.GetAuth(ctx))
-	if err != nil {
-		return nil, errors.Wrap(err, "failed to delete service env var")
-	}
-	return nil, err
 }
